Closed Bug 127592 Opened 23 years ago Closed 23 years ago

[FIX]`PRBool readError' might be used uninitialized (bug 27609 leftovers)

Categories

(Core Graveyard :: File Handling, defect, P1)

x86
Linux
defect

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.0

People

(Reporter: mozilla-bugs, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

Bug 27609 check-ins added two "`PRBool readError' might be used uninitialized"
warnings:

embedding/components/webbrowserpersist/src/nsWebBrowserPersist.cpp:674
 `PRBool readError' might be used uninitialized in this function

uriloader/exthandler/nsExternalHelperAppService.cpp:1159
 `PRBool readError' might be used uninitialized in this function

Attachment 70686 [details] [diff] on bug 27609 has a fix (and r=hwaara).
Blocks: 59652
Attached patch The patchSplinter Review
Keywords: mozilla1.0
Priority: -- → P1
Summary: `PRBool readError' might be used uninitialized (bug 27609 leftovers) → [FIX]`PRBool readError' might be used uninitialized (bug 27609 leftovers)
Target Milestone: --- → mozilla1.0
QA Contact: sairuh → nobody
Comment on attachment 71261 [details] [diff] [review]
The patch

sr=shaver.  This is a nothing patch, I'll waive the requirement for r=.
Attachment #71261 - Flags: superreview+
Comment on attachment 71261 [details] [diff] [review]
The patch

a=asa (on behalf of drivers) for checkin to the 1.0 trunk
Attachment #71261 - Flags: approval+
checked in on trunk
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Warnings went away on TBox, marking verified.
Status: RESOLVED → VERIFIED
Comment on attachment 71261 [details] [diff] [review]
The patch

noting r=me to make up for my slow sr= request queue processing.

/be
Attachment #71261 - Flags: review+
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: