Fix compiler warnings.  Bug 127592, r=hwaara, sr=shaver, a=asa